# CG-UFPB

./: .gitignore
Estudos/: displaylist  displaylists.c
Exercicio 01-04/: .estereoscopia.c.swo  .estereoscopia.c.swp  desenho.c  desenho2  desenho2.c  estereoscopia  estereoscopia.c
Exercicio 03-04/: modeling.cpp
Exercicio 13-03/: classes.h
Exercicio 24-04/: desenho  desenho.c
Exercicio 25-02/: desenho.c
Exercicio 25-03/: desenho  desenho.c
Movements/: movesquare.c
Projeto/: .gitignore  CMakeLists.txt  Makefile  README.md  basecode.c  frog.cpp  frog.h  gameconf.h  main.cpp  obstacle.cpp  obstacle.h  skater.cpp  skater.h
Projeto/include/: gameconf.h  utils.h
Projeto/src/: bird.cpp  bird.h  main.cpp  obstacle.cpp  obstacle.h  skater.cpp  skater.h
